# ffsim-numerics

./: .gitignore  README.md  envrc  pyproject.toml
molecular_data/n2_6-31g_10e16o/: n2_6-31g_10e16o_d-0.70000.json.xz  n2_6-31g_10e16o_d-0.75000.json.xz  n2_6-31g_10e16o_d-0.80000.json.xz  n2_6-31g_10e16o_d-0.85000.json.xz  n2_6-31g_10e16o_d-0.90000.json.xz  n2_6-31g_10e16o_d-0.95000.json.xz  n2_6-31g_10e16o_d-1.00000.json.xz  n2_6-31g_10e16o_d-1.05000.json.xz  n2_6-31g_10e16o_d-1.10000.json.xz  n2_6-31g_10e16o_d-1.15000.json.xz  n2_6-31g_10e16o_d-1.25000.json.xz  n2_6-31g_10e16o_d-1.30000.json.xz  n2_6-31g_10e16o_d-1.35000.json.xz  n2_6-31g_10e16o_d-1.40000.json.xz  n2_6-31g_10e16o_d-1.45000.json.xz  n2_6-31g_10e16o_d-1.50000.json.xz  n2_6-31g_10e16o_d-1.55000.json.xz  n2_6-31g_10e16o_d-1.60000.json.xz  n2_6-31g_10e16o_d-1.65000.json.xz  n2_6-31g_10e16o_d-1.70000.json.xz  n2_6-31g_10e16o_d-1.75000.json.xz  n2_6-31g_10e16o_d-1.80000.json.xz  n2_6-31g_10e16o_d-1.85000.json.xz  n2_6-31g_10e16o_d-1.90000.json.xz  n2_6-31g_10e16o_d-1.95000.json.xz  n2_6-31g_10e16o_d-2.00000.json.xz  n2_6-31g_10e16o_d-2.05000.json.xz  n2_6-31g_10e16o_d-2.10000.json.xz  n2_6-31g_10e16o_d-2.15000.json.xz  n2_6-31g_10e16o_d-2.20000.json.xz  n2_6-31g_10e16o_d-2.25000.json.xz  n2_6-31g_10e16o_d-2.30000.json.xz  n2_6-31g_10e16o_d-2.35000.json.xz  n2_6-31g_10e16o_d-2.45000.json.xz  n2_6-31g_10e16o_d-2.50000.json.xz  n2_6-31g_10e16o_d-2.55000.json.xz  n2_6-31g_10e16o_d-2.60000.json.xz  n2_6-31g_10e16o_d-2.65000.json.xz  n2_6-31g_10e16o_d-2.70000.json.xz  n2_6-31g_10e16o_d-2.75000.json.xz  (+7 more)
(+126 files in other folders)
